# calico

./: CMakeLists.txt  LICENSE  README.md  README.md.txt  brute_force.hpp  math.hpp  soa_input.hpp  soa_result.hpp  test1.cpp  tracer.hpp
calico/: brute_force.hpp  math.hpp  soa_input.hpp  tracer.hpp
calico/accelerator/: bounding_box.hpp  brute_force.hpp  simple_bvh.hpp  wald_bvh.hpp
calico/input/: soa_input.hpp
calico/result/: soa_result.hpp
calico/utilities/: memory.h
calico/utilities/meshes/: plate.hpp  wavefront.hpp  wavefront_aos.hpp  wavefront_soa.hpp
canned_meshes/: plate.hpp
test/: plate.cpp
tests/: .swp  CMakeLists.txt  bounding_box.cpp  plate.cpp  wavefront.cpp  wavefront_bvh.cpp
utilities/: wavefront.hpp
